--- a/food_passion/src/App.css
+++ b/food_passion/src/App.css
@@ -1,41 +1,35 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
 }
+/* buttons */
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primary-500);
+  border: transparent;
+  border-radius: var(--borderRadius);
+  letter-spacing: var(--letterSpacing);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  text-transform: capitalize;
+  display: inline-block;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-3);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.btn-hipster {
+  color: var(--primary-500);
+  background: var(--primary-200);
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-hipster:hover {
+  color: var(--white);
+  background: var(--black);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.btn-block {
+  width: 100%;
 }
