Search Logic Setup

--- a/food_passion/src/App.css
+++ b/food_passion/src/App.css
@@ -112,7 +112,7 @@
 /* Search */
 
 .search-container{
-  height: 5px;
+  height: 5rem;
   background: var(--white);
   display: flex;
   align-items: center;
